@@ -16,3 +16,6 @@ check debug.random "override2" {
 }
 
 check debug.random "defaults" {}
+
+alert debug.sysout "text" {}
+alert debug.sysout "foo" {}
