@@ -5,3 +5,5 @@ check debug.random "same" {
 }
 
 check http.get "same" {}
+
+alert debug.sysout "text" {}
