@@ -1,0 +1,8 @@
+alert debug.sysout "alert1" {}
+
+check debug.random "c3" {
+    alerts = ["alert1", "-", "alert2"]
+    interval = 3s
+    good_threshold = 5
+    failing_threshold = 6
+}
