@@ -1,0 +1,1 @@
+"error configuring check c3: no alerts match 'alert2'"
