@@ -22,8 +22,12 @@
   copyright information for all compiled code.
 * The `Config` field in the `AlertDetails` struct passed to
   alerts is now correctly populated.
-* The gRPC API and the `plumctl` client now only support
-  TLS 1.3 or greater.
+* The gRPC API and the `plumctl` client now require TLS 1.3
+  or greater.
+* Goplum will now error on startup if any checks have
+  invalid alerts configured; previously it just printed an error
+  when it attempted to raise the alert.
+  (https://github.com/csmith/goplum/issues/36[#36])
 
 == v0.4.0
 
